# Mini-EVM

./: .gitignore  Cargo.toml  README.md  run.py
src/: lib.rs  main.rs
test_files/: Bank.sol  Counter.sol
tests/: arithmetic_test.rs  opcode_test.rs  other_opcode_test.rs
tests/common/: mod.rs
