[package]
name = "mini-evm"
version = "0.1.0"
edition = "2024"

[dependencies]
primitive-types = "0.12"
thiserror = "1.0"
sha3 = "0.10"
hex = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
u256-literal = "1.2.1"
chrono = "0.4.42"
